//! Firmware management commands
//!
//! Provides commands for firmware updates and version management:
//! - `firmware update <device> <bundle.owfb>` - Interactive firmware update
//! - `firmware info <device>` - Show current firmware details
//! - `firmware list-versions [--device <device>]` - List available versions
//! - `firmware rollback <device>` - Manual rollback to previous firmware
//!
//! Note: In production, these commands communicate with the wheeld service
//! via IPC to perform firmware operations. The current implementation uses
//! placeholder service calls marked with TODO comments.

use anyhow::Result;
use colored::*;
use dialoguer::Confirm;
use indicatif::{ProgressBar, ProgressStyle};
use serde::{Deserialize, Serialize};
use std::path::PathBuf;
use std::time::Duration;

use crate::commands::FirmwareCommands;
use crate::error::CliError;
use crate::output;

/// Execute firmware command
pub async fn execute(cmd: &FirmwareCommands, json: bool, _endpoint: Option<&str>) -> Result<()> {
    match cmd {
        FirmwareCommands::Update {
            device,
            bundle,
            yes,
        } => update_firmware(device, bundle, json, *yes).await,
        FirmwareCommands::Info { device } => show_firmware_info(device, json).await,
        FirmwareCommands::ListVersions { device } => {
            list_available_versions(device.as_deref(), json).await
        }
        FirmwareCommands::Rollback { device, yes } => rollback_firmware(device, json, *yes).await,
    }
}

/// Firmware information for a device
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct DeviceFirmwareInfo {
    /// Device identifier
    pub device_id: String,
    /// Device name
    pub device_name: String,
    /// Current firmware version
    pub current_version: String,
    /// Hardware model
    pub hardware_model: String,
    /// Hardware serial number
    pub serial_number: String,
    /// Last update date
    pub last_updated: Option<String>,
    /// Previous firmware version (for rollback)
    pub previous_version: Option<String>,
    /// Whether there's an update available
    pub update_available: bool,
    /// Latest available version
    pub latest_version: Option<String>,
}

/// Firmware version information
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct FirmwareVersionInfo {
    /// Version string
    pub version: String,
    /// Release channel (stable, beta, nightly)
    pub channel: String,
    /// Release date
    pub release_date: String,
    /// Whether this is the currently installed version
    pub installed: bool,
    /// Changelog/release notes
    pub changelog: Option<String>,
    /// Compatibility status
    pub compatible: bool,
    /// Compatibility notes (e.g., "Requires hardware v2.0+")
    pub compatibility_notes: Option<String>,
}

/// Bundle metadata for display
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct BundleDisplayInfo {
    /// Target device model
    pub device_model: String,
    /// Firmware version
    pub version: String,
    /// Bundle title
    pub title: Option<String>,
    /// Changelog/release notes
    pub changelog: Option<String>,
    /// Minimum hardware version
    pub min_hw_version: Option<String>,
    /// Maximum hardware version
    pub max_hw_version: Option<String>,
    /// Release channel
    pub channel: String,
    /// Build timestamp
    pub build_timestamp: String,
    /// Whether the bundle is signed
    pub is_signed: bool,
    /// Signer name (if signed)
    pub signer: Option<String>,
}

/// Update stages for progress display
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum UpdateStage {
    VerifyingSignature,
    CheckingCompatibility,
    TransferringFirmware,
    Flashing,
    RebootingDevice,
    VerifyingUpdate,
    Complete,
}

impl UpdateStage {
    fn description(&self) -> &'static str {
        match self {
            UpdateStage::VerifyingSignature => "Verifying bundle signature",
            UpdateStage::CheckingCompatibility => "Checking hardware compatibility",
            UpdateStage::TransferringFirmware => "Transferring firmware data",
            UpdateStage::Flashing => "Flashing firmware to device",
            UpdateStage::RebootingDevice => "Rebooting device",
            UpdateStage::VerifyingUpdate => "Verifying update success",
            UpdateStage::Complete => "Update complete",
        }
    }

    fn progress_percent(&self) -> u64 {
        match self {
            UpdateStage::VerifyingSignature => 10,
            UpdateStage::CheckingCompatibility => 20,
            UpdateStage::TransferringFirmware => 50,
            UpdateStage::Flashing => 80,
            UpdateStage::RebootingDevice => 90,
            UpdateStage::VerifyingUpdate => 95,
            UpdateStage::Complete => 100,
        }
    }
}

/// Interactive firmware update command
async fn update_firmware(
    device: &str,
    bundle_path: &PathBuf,
    json: bool,
    skip_confirmation: bool,
) -> Result<()> {
    // Validate bundle file exists
    if !bundle_path.exists() {
        return Err(CliError::ValidationError(format!(
            "Bundle file not found: {}",
            bundle_path.display()
        ))
        .into());
    }

    // Check file extension
    let extension = bundle_path
        .extension()
        .and_then(|e| e.to_str())
        .unwrap_or("");
    if extension != "owfb" {
        return Err(CliError::ValidationError(format!(
            "Invalid bundle file extension '{}'. Expected '.owfb' (OpenRacing Wheel Firmware Bundle)",
            extension
        ))
        .into());
    }

    // TODO: Load bundle via service IPC
    // For now, use mock bundle metadata
    let bundle_info = get_mock_bundle_info(bundle_path)?;

    // TODO: Check device connectivity via service IPC
    // For now, verify device exists using mock check
    let device_info = get_mock_device_firmware_info(device)?;

    if json {
        // In JSON mode, output result directly
        let output = serde_json::json!({
            "success": true,
            "action": "firmware_update",
            "device": device,
            "bundle": bundle_info,
            "old_version": device_info.current_version,
            "new_version": bundle_info.version,
            "message": format!("Firmware updated successfully from {} to {}",
                device_info.current_version, bundle_info.version)
        });
        println!("{}", serde_json::to_string_pretty(&output)?);
        return Ok(());
    }

    // Display bundle metadata
    println!("{}", "Firmware Update".bold());
    println!("{}", "═".repeat(60));
    println!();

    println!("  {} {}", "Bundle:".bold(), bundle_path.display());
    println!(
        "  {} {}",
        "Target Device:".bold(),
        bundle_info.device_model.cyan()
    );
    println!(
        "  {} {}",
        "Firmware Version:".bold(),
        bundle_info.version.green()
    );

    if let Some(ref title) = bundle_info.title {
        println!("  {} {}", "Release:".bold(), title);
    }

    println!("  {} {}", "Channel:".bold(), bundle_info.channel);
    println!("  {} {}", "Build Date:".bold(), bundle_info.build_timestamp);

    // Show signature status
    if bundle_info.is_signed {
        println!(
            "  {} {} {}",
            "Signature:".bold(),
            "Verified".green(),
            bundle_info
                .signer
                .as_ref()
                .map(|s| format!("({})", s))
                .unwrap_or_default()
                .dimmed()
        );
    } else {
        println!(
            "  {} {}",
            "Signature:".bold(),
            "Unsigned (not recommended)".yellow()
        );
    }

    println!();

    // Display changelog if available
    if let Some(ref changelog) = bundle_info.changelog {
        println!("{}", "Changelog:".bold());
        println!("{}", "─".repeat(60));
        for line in changelog.lines().take(10) {
            println!("  {}", line);
        }
        if changelog.lines().count() > 10 {
            println!("  {}", "... (truncated)".dimmed());
        }
        println!();
    }

    // Pre-flight checks
    println!("{}", "Pre-flight Checks:".bold());
    println!("{}", "─".repeat(60));

    // Check 1: Device connectivity
    print!("  Checking device connectivity... ");
    // TODO: Actual connectivity check via service
    tokio::time::sleep(Duration::from_millis(200)).await;
    println!("{} Connected", "✓".green());

    // Check 2: Hardware compatibility
    print!("  Checking hardware compatibility... ");
    // TODO: Actual compatibility check via service
    tokio::time::sleep(Duration::from_millis(200)).await;
    let compatible = check_hardware_compatibility(&bundle_info, &device_info);
    if compatible {
        println!("{} Compatible", "✓".green());
    } else {
        println!("{} Incompatible", "✗".red());
        println!();
        println!(
            "{}",
            "Error: This firmware bundle is not compatible with your hardware.".red()
        );
        if let Some(ref min_hw) = bundle_info.min_hw_version {
            println!("  Required hardware version: {} or higher", min_hw.yellow());
        }
        return Err(CliError::ValidationError(
            "Hardware version incompatible with firmware bundle".to_string(),
        )
        .into());
    }

    // Check 3: Version comparison
    print!("  Checking version... ");
    tokio::time::sleep(Duration::from_millis(100)).await;
    if bundle_info.version == device_info.current_version {
        println!("{} Same version already installed", "⚠".yellow());
        println!();
        println!(
            "{}",
            "Warning: The firmware version in this bundle is already installed.".yellow()
        );
    } else {
        println!(
            "{} {} → {}",
            "✓".green(),
            device_info.current_version.dimmed(),
            bundle_info.version.green()
        );
    }

    println!();

    // Confirm update
    if !skip_confirmation {
        println!(
            "{}",
            "Warning: Do not disconnect the device during the update process!".yellow()
        );
        println!();

        if !Confirm::new()
            .with_prompt("Proceed with firmware update?")
            .interact()?
        {
            output::print_warning("Firmware update cancelled", false);
            return Ok(());
        }
        println!();
    }

    // Perform the update with progress
    println!("{}", "Updating Firmware:".bold());
    println!("{}", "─".repeat(60));

    let stages = [
        UpdateStage::VerifyingSignature,
        UpdateStage::CheckingCompatibility,
        UpdateStage::TransferringFirmware,
        UpdateStage::Flashing,
        UpdateStage::RebootingDevice,
        UpdateStage::VerifyingUpdate,
        UpdateStage::Complete,
    ];

    let pb = ProgressBar::new(100);
    let style = ProgressStyle::default_bar()
        .template("{spinner:.green} [{bar:40.cyan/blue}] {pos}% {msg}")?
        .progress_chars("█▓░");
    pb.set_style(style);

    for stage in &stages {
        pb.set_message(stage.description().to_string());

        // TODO: Replace with actual service calls for each stage
        // Simulate stage progress
        let target = stage.progress_percent();
        let current = pb.position();
        let steps = (target - current) / 5;

        for _ in 0..steps.max(1) {
            tokio::time::sleep(Duration::from_millis(100)).await;
            pb.inc(5);
        }
        pb.set_position(target);

        if *stage == UpdateStage::Complete {
            pb.finish_with_message(format!("{} Firmware update completed", "✓".green()));
        }
    }

    println!();
    println!("{}", "═".repeat(60));
    output::print_success(
        &format!(
            "Device '{}' successfully updated to firmware v{}",
            device, bundle_info.version
        ),
        false,
    );
    println!();
    println!(
        "{}",
        "Note: If you experience any issues, use 'wheelctl firmware rollback' to revert.".dimmed()
    );

    Ok(())
}

/// Show current firmware information for a device
async fn show_firmware_info(device: &str, json: bool) -> Result<()> {
    // TODO: Get actual firmware info via service IPC
    let info = get_mock_device_firmware_info(device)?;

    if json {
        let output = serde_json::json!({
            "success": true,
            "firmware_info": info
        });
        println!("{}", serde_json::to_string_pretty(&output)?);
        return Ok(());
    }

    println!("{}", "Device Firmware Information".bold());
    println!("{}", "═".repeat(50));
    println!();

    println!("  {} {}", "Device:".bold(), info.device_name.cyan());
    println!("  {} {}", "Device ID:".bold(), info.device_id.dimmed());
    println!();

    println!(
        "  {} {}",
        "Firmware Version:".bold(),
        info.current_version.green()
    );
    println!("  {} {}", "Hardware Model:".bold(), info.hardware_model);
    println!(
        "  {} {}",
        "Serial Number:".bold(),
        info.serial_number.dimmed()
    );

    if let Some(ref last_updated) = info.last_updated {
        println!("  {} {}", "Last Updated:".bold(), last_updated);
    }

    println!();

    // Show rollback availability
    println!("  {}:", "Rollback Available".bold());
    if let Some(ref prev_version) = info.previous_version {
        println!("    {} Previous version: {}", "●".green(), prev_version);
    } else {
        println!("    {} No previous version available", "○".dimmed());
    }

    println!();

    // Show update availability
    println!("  {}:", "Updates".bold());
    if info.update_available {
        if let Some(ref latest) = info.latest_version {
            println!(
                "    {} New version available: {}",
                "●".cyan(),
                latest.green()
            );
            println!(
                "    {}",
                format!(
                    "Run 'wheelctl firmware update {} <bundle.owfb>' to update",
                    device
                )
                .dimmed()
            );
        }
    } else {
        println!("    {} Your firmware is up to date", "✓".green());
    }

    println!();
    println!("{}", "═".repeat(50));

    Ok(())
}

/// List available firmware versions
async fn list_available_versions(device: Option<&str>, json: bool) -> Result<()> {
    // TODO: Fetch available versions from firmware registry via service IPC
    let versions = get_mock_available_versions(device)?;

    if json {
        let output = serde_json::json!({
            "success": true,
            "device": device,
            "versions": versions
        });
        println!("{}", serde_json::to_string_pretty(&output)?);
        return Ok(());
    }

    println!("{}", "Available Firmware Versions".bold());
    if let Some(dev) = device {
        println!("Device: {}", dev.cyan());
    }
    println!("{}", "═".repeat(60));
    println!();

    if versions.is_empty() {
        println!("{}", "No firmware versions available".yellow());
        println!();
        println!(
            "{}",
            "Hint: Check your internet connection or registry configuration.".dimmed()
        );
        return Ok(());
    }

    // Group by channel
    let stable: Vec<_> = versions.iter().filter(|v| v.channel == "stable").collect();
    let beta: Vec<_> = versions.iter().filter(|v| v.channel == "beta").collect();
    let nightly: Vec<_> = versions.iter().filter(|v| v.channel == "nightly").collect();

    // Display stable versions
    if !stable.is_empty() {
        println!("  {} ({})", "Stable".bold(), stable.len());
        for v in &stable {
            print_version_entry(v);
        }
        println!();
    }

    // Display beta versions
    if !beta.is_empty() {
        println!("  {} ({})", "Beta".bold().yellow(), beta.len());
        for v in &beta {
            print_version_entry(v);
        }
        println!();
    }

    // Display nightly versions
    if !nightly.is_empty() {
        println!("  {} ({})", "Nightly".bold().red(), nightly.len());
        for v in &nightly {
            print_version_entry(v);
        }
        println!();
    }

    println!("{}", "═".repeat(60));
    println!();
    println!(
        "{}",
        "Use 'wheelctl firmware update <device> <bundle.owfb>' to install firmware".dimmed()
    );

    Ok(())
}

/// Print a single version entry
fn print_version_entry(v: &FirmwareVersionInfo) {
    let status_icon = if v.installed {
        "●".green()
    } else if !v.compatible {
        "○".red()
    } else {
        "○".dimmed()
    };

    let version_display = if v.installed {
        format!("{} (installed)", v.version).green().to_string()
    } else {
        v.version.clone()
    };

    println!(
        "    {} {} - {}",
        status_icon,
        version_display,
        v.release_date.dimmed()
    );

    if !v.compatible
        && let Some(ref notes) = v.compatibility_notes
    {
        println!("      {} {}", "⚠".yellow(), notes.yellow());
    }

    if let Some(ref changelog) = v.changelog {
        // Show first line of changelog
        if let Some(first_line) = changelog.lines().next() {
            let display_line = if first_line.len() > 50 {
                format!("{}...", &first_line[..47])
            } else {
                first_line.to_string()
            };
            println!("      {}", display_line.dimmed());
        }
    }
}

/// Rollback firmware to previous version
async fn rollback_firmware(device: &str, json: bool, skip_confirmation: bool) -> Result<()> {
    // TODO: Get device info and check rollback availability via service IPC
    let device_info = get_mock_device_firmware_info(device)?;

    let previous_version = match &device_info.previous_version {
        Some(v) => v.clone(),
        None => {
            if json {
                let output = serde_json::json!({
                    "success": false,
                    "error": "No previous firmware version available for rollback"
                });
                println!("{}", serde_json::to_string_pretty(&output)?);
                return Ok(());
            }
            return Err(CliError::ValidationError(
                "No previous firmware version available for rollback. \
                Rollback is only available after a firmware update."
                    .to_string(),
            )
            .into());
        }
    };

    if json {
        let output = serde_json::json!({
            "success": true,
            "action": "firmware_rollback",
            "device": device,
            "old_version": device_info.current_version,
            "new_version": previous_version,
            "message": format!("Firmware rolled back from {} to {}",
                device_info.current_version, previous_version)
        });
        println!("{}", serde_json::to_string_pretty(&output)?);
        return Ok(());
    }

    println!("{}", "Firmware Rollback".bold());
    println!("{}", "═".repeat(50));
    println!();

    println!("  {} {}", "Device:".bold(), device_info.device_name.cyan());
    println!(
        "  {} {}",
        "Current Version:".bold(),
        device_info.current_version
    );
    println!("  {} {}", "Rollback To:".bold(), previous_version.yellow());
    println!();

    println!(
        "{}",
        "Warning: Rolling back firmware may cause loss of new features or settings.".yellow()
    );
    println!();

    if !skip_confirmation
        && !Confirm::new()
            .with_prompt(format!(
                "Rollback firmware from {} to {}?",
                device_info.current_version, previous_version
            ))
            .interact()?
    {
        output::print_warning("Rollback cancelled", false);
        return Ok(());
    }

    println!();
    println!("{}", "Performing Rollback:".bold());
    println!("{}", "─".repeat(50));

    // Spinner for rollback progress
    let pb = ProgressBar::new_spinner();
    let style = ProgressStyle::default_spinner().template("{spinner:.green} {msg}")?;
    pb.set_style(style);
    pb.enable_steady_tick(Duration::from_millis(100));

    // TODO: Replace with actual service calls
    pb.set_message("Activating previous firmware partition...");
    tokio::time::sleep(Duration::from_secs(1)).await;

    pb.set_message("Rebooting device...");
    tokio::time::sleep(Duration::from_secs(2)).await;

    pb.set_message("Verifying rollback...");
    tokio::time::sleep(Duration::from_millis(500)).await;

    pb.finish_with_message(format!("{} Rollback completed", "✓".green()));

    println!();
    println!("{}", "═".repeat(50));
    output::print_success(
        &format!(
            "Device '{}' rolled back to firmware v{}",
            device, previous_version
        ),
        false,
    );

    Ok(())
}

/// Check hardware compatibility between bundle and device
fn check_hardware_compatibility(bundle: &BundleDisplayInfo, _device: &DeviceFirmwareInfo) -> bool {
    // TODO: Implement actual hardware version comparison
    // For now, mock compatibility check
    if let Some(ref _min_hw) = bundle.min_hw_version {
        // In real implementation, parse and compare hardware versions
        // using the HardwareVersion module from the service crate
        true
    } else {
        true
    }
}

/// Get mock bundle information (placeholder for service IPC)
fn get_mock_bundle_info(_bundle_path: &PathBuf) -> Result<BundleDisplayInfo> {
    // TODO: Replace with actual bundle loading via service IPC
    // The service should load the bundle, verify signature, and return metadata
    Ok(BundleDisplayInfo {
        device_model: "Fanatec DD Pro".to_string(),
        version: "2.1.0".to_string(),
        title: Some("Performance Update".to_string()),
        changelog: Some(
            "- Improved FFB latency by 15%\n\
             - Fixed rare encoder drift issue\n\
             - Added new torque smoothing algorithm\n\
             - Improved thermal management"
                .to_string(),
        ),
        min_hw_version: Some("1.0".to_string()),
        max_hw_version: None,
        channel: "stable".to_string(),
        build_timestamp: "2024-01-15T10:30:00Z".to_string(),
        is_signed: true,
        signer: Some("OpenRacing Official".to_string()),
    })
}

/// Get mock device firmware info (placeholder for service IPC)
fn get_mock_device_firmware_info(device: &str) -> Result<DeviceFirmwareInfo> {
    // TODO: Replace with actual device query via service IPC
    // Simulate device not found for unknown devices
    if !["wheel-001", "pedals-001", "fanatec-dd-pro"].contains(&device) {
        return Err(CliError::DeviceNotFound(device.to_string()).into());
    }

    Ok(DeviceFirmwareInfo {
        device_id: device.to_string(),
        device_name: "Fanatec DD Pro".to_string(),
        current_version: "2.0.0".to_string(),
        hardware_model: "DD Pro Rev 2.1".to_string(),
        serial_number: "FAN-DD-001234".to_string(),
        last_updated: Some("2024-01-01T08:00:00Z".to_string()),
        previous_version: Some("1.9.5".to_string()),
        update_available: true,
        latest_version: Some("2.1.0".to_string()),
    })
}

/// Get mock available versions (placeholder for service IPC)
fn get_mock_available_versions(device: Option<&str>) -> Result<Vec<FirmwareVersionInfo>> {
    // TODO: Replace with actual registry query via service IPC
    Ok(vec![
        FirmwareVersionInfo {
            version: "2.1.0".to_string(),
            channel: "stable".to_string(),
            release_date: "2024-01-15".to_string(),
            installed: false,
            changelog: Some("Performance improvements and bug fixes".to_string()),
            compatible: true,
            compatibility_notes: None,
        },
        FirmwareVersionInfo {
            version: "2.0.0".to_string(),
            channel: "stable".to_string(),
            release_date: "2024-01-01".to_string(),
            installed: device == Some("wheel-001") || device == Some("fanatec-dd-pro"),
            changelog: Some("Major release with new FFB engine".to_string()),
            compatible: true,
            compatibility_notes: None,
        },
        FirmwareVersionInfo {
            version: "1.9.5".to_string(),
            channel: "stable".to_string(),
            release_date: "2023-12-15".to_string(),
            installed: false,
            changelog: Some("Stability improvements".to_string()),
            compatible: true,
            compatibility_notes: None,
        },
        FirmwareVersionInfo {
            version: "2.2.0-beta.1".to_string(),
            channel: "beta".to_string(),
            release_date: "2024-01-20".to_string(),
            installed: false,
            changelog: Some("Preview of new features".to_string()),
            compatible: true,
            compatibility_notes: None,
        },
        FirmwareVersionInfo {
            version: "2.3.0-nightly.20240125".to_string(),
            channel: "nightly".to_string(),
            release_date: "2024-01-25".to_string(),
            installed: false,
            changelog: Some("Development build - use with caution".to_string()),
            compatible: false,
            compatibility_notes: Some("Requires hardware v3.0+".to_string()),
        },
    ])
}
